--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "A Recoil Implementation",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "snowpack dev"
+    "build": "tsc",
+    "dev": "snowpack dev",
+    "test": "jest"
   },
   "author": "Zhuo FENG",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/react-test-renderer": "^17.0.1",
+    "jest": "^27.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
     "snowpack": "^3.5.2",
+    "ts-jest": "^27.0.2",
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
