--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,5 +61,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["./src"],
-  "exclude": ["node_modules", "../examples"]
+  "exclude": ["node_modules", "examples/**/*", "*/__tests__/**/*", "dist/**/*"]
 }
