--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,6 @@ jobs:
         with:
           version: 6.6.2
           run_install: true
+      - run: pnpm lint
       - run: pnpm test
       - run: pnpm build
