--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Zhuo FENG",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.24",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
     "@types/react-test-renderer": "^17.0.1",
@@ -24,17 +24,13 @@
     "jest": "^27.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
-    "redux": "^4.1.0",
     "snowpack": "^3.5.2",
     "ts-jest": "^27.0.2",
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "react-dom": "^17.0.2"
   }
 }
